2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCerr.c, src/SDCCerr.h, src/SDCC.lex:
	  SDCCerr code cleanup

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c:
	  Enable long long for gbz80 and z180 ports.
	* src/pic14/gen.c:
	  Fixed use of pic16 functions in pic14 port.

2011-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/src/izt/tlcs900h.c,
	  src/izt/i186.c,
	  src/z80/main.c:
	  Added missing long long type size entries.

2011-10-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/ds390/main.c: added missing long long type size entries

2011-10-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/z80.src/sz80.cc: enable sz80 -H option
	* sim/ucsim/globals.cc,
	* sim/ucsim/globals.h,
	* sim/ucsim/stypes.h,
	* sim/ucsim/hc08.src/shc08.cc,
	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/hc08cl.h,
	* sum/ucsim/hc08.src/inst.cc,
	* sum/ucsim/hc08.src/instcl.h,
	* sum/ucsim/hc08.src/hc08mac.h: Add support for HCS08 instructions

2011-09-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/xa51/main.c
	  src/mcs51/main.c
	  src/SDCCsymt.c
	  src/SDCCsymt.h
	  src/avr/main.c
	  src/port.h
	  src/pic14/main.c
	  src/z80/gen.c
	  src/z80/ralloc.c
	  src/z80/main.c
	  src/pic16/main.c
	  src/SDCCglobl.h
	  src/hc08/main.c
	  src/ds390/main.c:
	  Very basic (no multiplication/division/shift/return) support for long long for the Z80.

2011-09-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCsymt.c:
	  Drop support for declarations like "long short short long short int x;".

2011-09-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* configure.in,
	  configure: create device/lib/z180/Makefile during configuration

2011-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Handle the trivial casts more like assignments, allow hl in operands for unary minus.

2011-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* ChangeLog: